Revert "attempt to fix scrollbar on members page"
This reverts commit ef9de64d9080f90fd225ca27724b4ac19658ef7c.

--- a/css/members.css
+++ b/css/members.css
@@ -12,6 +12,7 @@
 html,
 body {
     position: relative;
+    height: 100vh;
     width: 100%;
     background-color: #040a22;
     font-family: "Nunito", sans-serif;
